recent_topics: Let text in wrap to enforce fix width behaviour.
If we don't allow text to wrap, it overrides the fix width of
the columns.

--- a/static/styles/recent_topics.css
+++ b/static/styles/recent_topics.css
@@ -247,11 +247,6 @@
             }
         }
 
-        .recent_topic_stream,
-        thead .last_msg_time_header {
-            white-space: nowrap;
-        }
-
         thead .last_msg_time_header {
             /* The responsive table of bootstrap
                somehow ignores the width of ::after
